fix: homepage latest section mobile animation fixed

--- a/src/pages/home/Latest.scss
+++ b/src/pages/home/Latest.scss
@@ -86,32 +86,19 @@
       }
 
       @media (max-width: 991px) {
-        &::before {
-          content: '';
-          position: absolute;
-          left: 50%;
-          top: 50%;
-          transform: translateX(-50%) translateY(-50%);
-          width: 100vw;
-          height: 100%;
-          opacity: 0;
-          transition: opacity 0.6s ease-in-out;
-          background: $lighter-color;
-          z-index: 0;
-          visibility: visible;
+        .homeLatestGridItemTitle,
+        .homeLatestGridItemSubtitle {
+          transition: color 0.3s ease-in-out;
+          color: rgba(243, 242, 232, 0.5);
         }
 
         &.active {
-          &::before {
-            opacity: 1;
-            visibility: visible;
+          .homeLatestGridItemTitle {
+            color: $lighter-color;
           }
 
-          .homeLatestGridItemTitle,
           .homeLatestGridItemSubtitle {
-            position: relative;
-            z-index: 1;
-            color: $dark-color;
+            color: $light-color;
           }
         }
       }
@@ -124,6 +111,14 @@
           .homeLatestGridItemSubtitle {
             color: $dark-color;
           }
+        }
+
+        .homeLatestGridItemTitle {
+          color: $lighter-color;
+        }
+
+        .homeLatestGridItemSubtitle {
+          color: $light-color;
         }
 
         display: flex;
@@ -230,10 +225,9 @@
         font-size: 16px;
         line-height: 20px;
         letter-spacing: 0.05em;
-        color: $lighter-color;
         margin-bottom: 15px;
         align-self: flex-start;
-        transition: background-color 0.6s ease-in-out;
+        transition: background-color 0.6s ease-in-out, color 0.4s ease-in-out;
       }
 
       .homeLatestGridItemSubtitle {
@@ -241,8 +235,7 @@
         font-size: 12px;
         line-height: 20px;
         letter-spacing: 0.05em;
-        color: $light-color;
-        transition: background-color 0.6s ease-in-out;
+        transition: background-color 0.6s ease-in-out, color 0.4s ease-in-out;
       }
     }
   }
